--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
