--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.15",
+    "babel-eslint": "^10.1.0",
     "tailwindcss": "^3.3.3"
   }
 }
